# opencode

./: .gitignore
rustonework/: Cargo.toml  a.html  a.txt  b.html
rustonework/.cargo/: config.toml
rustonework/cgi_fuzz/: Cargo.toml
rustonework/cgi_fuzz/src/: main.rs
rustonework/concurrency_book/: Cargo.toml
rustonework/concurrency_book/src/: main.rs
rustonework/concurrency_book/tests/: 01.rs
rustonework/freecyber/: Cargo.toml  abc.txt  country.md  node_st.txt  nodes.txt  socks5.html
rustonework/freecyber/src/: lib.rs  main.rs  netspeed.rs  proxycli.rs
rustonework/freecyber/src/netnode/: cyber_node.rs  mod.rs
rustonework/freecyber/tests/: asc.rs  testspeed.rs
rustonework/netlib/: Cargo.toml
rustonework/netlinker/: Cargo.toml
rustonework/netlinker/src/: main.rs
rustonework/netlinker/tests/: dns.rs  http.rs  socks5.rs  tunnel.rs  udp.rs
rustonework/practical-rust-book/: Cargo.toml
rustonework/qrc_helper/: Cargo.toml
rustonework/qrc_helper/src/: main.rs
rustonework/remote_pty/: Cargo.toml
rustonework/remote_pty/src/: args.rs  lib.rs  main.rs  self_cert.rs
rustonework/remote_pty/tests/: basic.rs
rustonework/shadowsocks_demo/: Cargo.toml
rustonework/ssh2_cli/: Cargo.toml
rustonework/ssh2_cli/src/: main.rs
rustonework/traffictunnel/: Cargo.toml
rustonework/traffictunnel/src/: main.rs
rustonework/webview_demo/: Cargo.toml
rustonework/wrap_demo01/: Cargo.toml  curl.txt  log4rs.yaml  postgresql.conf  question.json
rustonework/wrap_demo01/migrations/: 20240831030253_create_accounts_table.up.sql  20240901005540_extend_questions_table.down.sql  20240901005540_extend_questions_table.up.sql  20240901005552_extend_answers_table.down.sql  20240901005552_extend_answers_table.up.sql  20240901065758_answers_table.up.sql
rustonework/wrap_demo01/src/: error.rs  main.rs  profanity.rs  store.rs
rustonework/wrap_demo01/src/routes/: answer.rs  authenticate.rs  mod.rs  question.rs
rustonework/wrap_demo01/src/types/: account.rs  answer.rs  pagination.rs  question.rs
rustonework/wrap_demo01/tests/: get_hashmap.rs
