[package]
name = "cgi_fuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"]}
tokio = {version = "1", features = ["net","macros","rt-multi-thread"]}
elf = "0.7.4"
walkdir = "2.5.0"