[package]
edition = "2021"
name = "freecyber"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "freenode"
path = "bin/free_net_node.rs"

[dependencies]
clap = {version = "~4.4", features = ["derive"]}
reqwest = {version = "0.12.4", default-features = false, features = ["charset", "http2", "rustls-tls","blocking", "json","socks"]}
tokio = {version = "1", features = ["rt-multi-thread", "net", "tokio-macros", "macros"]}
scraper = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pretty-bytes = "0.2.2"
flate2 = { version = "1.0.30", features = ["zlib"] }
