[package]
name = "ssh2_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "echoserver"
path = "bin/echoserver.rs"

[[bin]]
name = "ssh2_client"
path = "bin/ssh2_client.rs"

[dependencies]
tokio = "1"
async-ssh2-tokio = "0.8.7"
russh = "0.43.0"
russh-keys = "0.43.0"
env_logger = "0.11.3"
log = "0.4.21"
async-trait = "0.1.80"
anyhow = "1.0.82"

ssh-rs = "0.5.0"