[package]
name = "traffictunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
log = "0.4.20"
env_logger = "0.10.1"
chrono = "0.4.31"
clap = { version = "4.4.16", features = ["derive"] }
